--- a/styles/components/sections/Teachers.module.sass
+++ b/styles/components/sections/Teachers.module.sass
@@ -29,17 +29,11 @@
   position: relative
   @include m.media(laptop, desktop)
     @include m.gap($mb: f.px(50, em))
-    // &::after
-    //   content: ''
-    //   position: absolute
-    //   left: 0
-    //   right: 0
-    //   bottom: 0
-    //   z-index: 100
-    //   height: f.px(127)
-    //   pointer-events: none
-    //   background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%)
-    //   transform: rotate(180deg)
+  @include m.media(phone, tablet)
+    @include m.gap($mb: f.px(30))
+    height: 200px
+    & > *
+      height: 200px
 
 .btnContainer
   @include m.media(phone, tablet)
