--- a/styles/components/sections/YourDiploma.module.sass
+++ b/styles/components/sections/YourDiploma.module.sass
@@ -44,7 +44,7 @@
 
 .left
   @include m.media(laptop, desktop)
-  flex-basis: 50%
+  flex-basis: 51%
     // @include m.gap($mr: f.px(30))
 
 .swiper
@@ -73,7 +73,7 @@
   display: grid
   grid-template-columns: repeat(2, 1fr)
   row-gap: 5px
-  column-gap: 10px
+  column-gap: 20px
   justify-items: stretch
   flex-shrink: 0
 
